assets/styles/style.scss
@use 'animations';
@use 'colormode';

// scrollbar
::-webkit-scrollbar {
	width: 10px;

	&-track {
		background-color: var(--nav-acrylic);
		width: 5px;
	}

	&-thumb {
		background-color: var(--scroll);
		border-radius: 1em;
	}
}

*,
*::before,
*::after {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

html {
	scroll-behavior: smooth;
	scroll-padding-top: 100px;
	@include animations.fade-in;
}

body {
	background-color: var(--background-color);
	font-family: 'Work Sans', sans-serif;
	color: var(--text);
	transition: 0.2s ease-in-out all;
	width: 100vw;
}

nav {
	z-index: 2;
	display: flex;
	background-color: var(--nav-background-color);
	padding: 1em 2em;
	position: sticky;
	top: 0;
	transition: 0.2s ease-in-out all;
	border-bottom: 1em #50282f;
	align-items: center;

	.hamburger {
		display: none;
	}

	// acrylic styling on scroll
	&.acrylic {
		background-color: var(--nav-acrylic);
		backdrop-filter: blur(2em);
	}

	// nav darkmode button
	input {
		appearance: none;
		width: 3em;
		height: 3em;
		background-color: var(--colormode-outer);
		border-radius: 2em;
		transition: ease-in-out all 0.2s;
		cursor: pointer;
		position: relative;
		margin-left: 2em;

		&::before {
			content: '';
			width: 1.1em;
			height: 2.1em;
			border-radius: 0 1em 1em 0;
			background-color: var(--colormode-inner);
			position: absolute;
			top: 15%;
			right: 15%;
			transition: ease-in-out all 0.2s;
		}

		&:hover {
			@include animations.pulsing;
			background-color: var(--colormode-hover-outer);
			transition: ease-in-out all 0.2s;

			&::before {
				background-color: var(--colormode-hover-inner);
			}
		}
	}

	// nav links
	a {
		color: var(--nav-links);
		text-decoration: none;
		transition: 0.2s ease-in-out;
		position: relative;

		&::after {
			background-color: var(--nav-links);
			transition: all 0.2s ease-in-out;
			content: '';
			display: block;
			position: absolute;
			width: 0;
			bottom: 0;
			right: 0;
			height: 0.14em;
			margin: -0.4em 0;
			border-radius: 25px;
		}

		&:hover {
			color: var(--nav-hover);
			transition: all 0.2s ease-in-out;
		}

		&:hover::after {
			background-color: var(--nav-hover);
			left: 0;
			width: 100%;
		}
	}

	.logo {
		flex-grow: 1;

		img {
			height: 6vh;
		}
	}

	.nav__links {
		display: flex;
		gap: 2em;
		align-items: center;
		flex-wrap: wrap;
		margin-left: 1em;
	}
}

main {
	// hightlight span colors for in p's
	.highlight {
		color: var(--text-highlight);
	}
}

// about page
#about {
	padding-top: 100px;

	// stripes
	.stripes__container1 {
		margin-bottom: 30px;

		.stripe1 {
			position: absolute;
			right: 0;
			width: 80vw;
			height: 10px;
			background-color: var(--stripe1);
		}

		.stripe2 {
			position: absolute;
			margin-top: 25px;
			right: 0;
			width: 60vw;
			height: 5px;
			background-color: var(--stripe2);
		}

		.stripe3 {
			position: absolute;
			margin-top: 50px;
			right: 0;
			width: 50vw;
			height: 4px;
			background-color: var(--stripe3);
		}
	}

	.stripes__container2 {
		margin-top: 60px;
		margin-bottom: 75px;

		.stripe4 {
			position: absolute;
			right: 0;
			width: 50vw;
			height: 4px;
			background-color: var(--stripe4);
		}

		.stripe5 {
			position: absolute;
			margin-top: 25px;
			right: 0;
			width: 60vw;
			height: 5px;
			background-color: var(--stripe5);
		}

		.stripe6 {
			position: absolute;
			margin-top: 50px;
			right: 0;
			width: 80vw;
			height: 5px;
			background-color: var(--stripe6);
		}
	}

	// header with h1 and img
	header {
		display: flex;
		align-items: center;
		justify-content: center;

		.roshnie__image {
			position: relative;
			display: block;
			max-width: 100%;
			height: auto;
			transform: translateX(3em);
			z-index: 1;
		}

		h1 {
			// position: absolute;
			background-color: var(--deco-color1);
			z-index: 1;
			font-weight: 400;
			font-size: 2.2em;
			padding: 1em 1em 1em 3em;
			z-index: -1;
			overflow: hidden;

			&::after {
				content: '';
				position: absolute;
				width: 450px;
				height: 155px;
				right: 0;
				top: 310px;
				background-color: var(--deco-color1);
				z-index: -1;
				overflow: hidden;
			}
		}
	}

	// about me section
	section {
		display: flex;
		flex-direction: column;
		align-items: center;
		gap: 2em;
		text-align: center;
		width: 400px;
		margin: 0 auto;
		// padding: 0 50em 0 50em;
		font-size: 1.2em;
	}
}

@media (min-width: 2975px) {
	#about {
		header {
			h1 {
				&::after {
					width: 1500px !important;
				}
			}
		}
	}
}

@media (min-width: 1920px) {
	#about {
		header {
			h1 {
				&::after {
					width: 1000px;
				}
			}
		}
	}
}

// media queries
@media (max-width: 1004px) {
	header {
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		text-align: center;

		img {
			transform: translateX(-4.5em);
			width: 300px;
		}

		h1 {
			// position: absolute;
			background: none !important;
			padding: 1em 0.3em 1em 0.3em !important;
			font-size: 1.5em !important;
			width: 350px !important;
			display: flex;
			flex-wrap: wrap;

			&::after {
				background: none !important;
			}
		}
	}

	#about {
		padding: 0 !important;

		section {
			gap: 1.3em !important;
			width: 320px !important;
		}
	}

	.phonehidden {
		display: none;
	}
}

@media (max-width: 768px) {
	nav {
		position: relative;

		.nav__links {
			position: fixed;
			bottom: 0;
			background-color: var(--nav-background-color);
			left: 0;
			right: 0;
			margin: 0;
			justify-content: center;
			gap: 6vw;
			flex-wrap: wrap;
			padding: 1.5em 1em;
		}
	}

	main {
		display: flex;
		flex-direction: column;
	}
}

@media (max-width: 452px) {
	nav {
		.nav__links {
			padding: 1.5em 0.5em;
		}
	}
}

@media (max-width: 320px) {
	nav {
		.nav__links {
			padding: 1.5em 0.5em;
		}
	}
}

